--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "storefrontDbContextConnection": "server=localhost;user=liftoffstorefront;password=0;database=liftoffstorefront"
+  }
 }
